--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,1 +1,45 @@
+name: Android CI/CD - Narrative Tensor Explorer
 
+on:
+  push:
+    branches: [ "main", "develop" ]
+  pull_request:
+    branches: [ "main" ]
+
+jobs:
+  build:
+    name: Build & Test (API 36 Ready)
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: gradle
+
+    - name: Install Android NDK
+      uses: android-actions/setup-android@v3
+      with:
+        api-level: 36
+        build-tools: 35.0.0
+        ndk: 26.1.10909125 # Stabil NDK verzió C++20-hoz
+
+    - name: Grant Execute Permission for Gradlew
+      run: chmod +x gradlew
+
+    - name: Build Debug APK
+      run: ./gradlew assembleDebug
+
+    - name: Run Unit Tests
+      run: ./gradlew test
+
+    - name: Upload Build Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: narrative-tensor-explorer-debug-apk
+        path: app/build/outputs/apk/debug/app-debug.apk
