--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -21,15 +21,23 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    # Ez kell a Kotlin/Java projekthez, különben nem tud buildelni
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
       with:
-        languages: 'cpp, java-kotlin'
+        # Ha nincs C++ a kódban, a 'cpp'-t töröld ki innen
+        languages: 'java-kotlin' 
         queries: security-and-quality
 
+    # JAVÍTVA: A helyes akció elérési útja
     - name: Autobuild
-      uses: github/github-actions/autobuild@v3
+      uses: github/codeql-action/autobuild@v3
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
-
