--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -5,8 +5,6 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  schedule:
-    - cron: '30 1 * * 1'
 
 jobs:
   analyze:
@@ -34,20 +32,18 @@ jobs:
         languages: 'java-kotlin, cpp'
         queries: security-and-quality
 
+    # JAVÍTOTT BUILD: Megkeresi a gradlew-t és ott futtatja az elemzést
     - name: Build with Gradle
       run: |
-        # Megkeressük a gradlew-t bárhol a projektben
         GRADLEW_FILE=$(find . -name "gradlew" | head -n 1)
-        
         if [ -z "$GRADLEW_FILE" ]; then
-          echo "Nem találom a gradlew-t, standard gradle build indítása..."
+          echo "Hiba: Nincs gradlew! Alapértelmezett build..."
           gradle assembleDebug --no-daemon
         else
-          echo "Gradlew megtalálva itt: $GRADLEW_FILE"
           chmod +x "$GRADLEW_FILE"
           GRADLE_DIR=$(dirname "$GRADLEW_FILE")
           cd "$GRADLE_DIR"
-          ./gradlew assembleDebug --no-daemon
+          ./gradlew assembleDebug --no-daemon -Pandroid.experimental.privacysandboxsdk.enable=false
         fi
 
     - name: Perform CodeQL Analysis
