--- a/gradle.properties
+++ b/gradle.properties
@@ -1,37 +1,7 @@
-# Project-wide Gradle settings
-# Növelt memória a C++ (NDK) és KSP fordításhoz
-org.gradle.jvmargs=-Xmx6144m -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-
-# Teljesítmény optimalizálás
-org.gradle.parallel=true
-org.gradle.caching=true
-org.gradle.configureondemand=true
-org.gradle.vfs.watch=true
-
-# AndroidX és Jetpack beállítások
+# Modern Android beállítások
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
-# A Jetifier már ritkán kell, de régi könyvtárak esetén biztonsági háló
-android.enableJetifier=true
 android.nonTransitiveRClass=true
 
-# Kotlin beállítások a 2.1.0 verzióhoz
+# Ez kapcsolja be az új típusú fordítást (KSP támogatáshoz kell)
 kotlin.code.style=official
-kotlin.incremental=true
-kotlin.parallel.tasks.in.project=true
-# KSP specifikus gyorsítás
-ksp.incremental=true
-
-# Projekt Verziók (A build.gradle.kts-ből is hivatkozható)
-VERSION_CODE=11
-VERSION_NAME=1.1-PRO
-
-# SDK Verziók (Összhangban az új build kódoddal)
-MIN_SDK=26
-TARGET_SDK=35
-COMPILE_SDK=35
-
-# Build Cache
-android.buildCacheDir=.build-cache
-
-# Compose stabilitás és debug támogatás
-kotlin.daemon.jvmargs=-Xmx2048m
