--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -13,10 +13,10 @@ jobs:
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4  # Frissítve v4-re
 
     - name: Setup JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4 # Frissítve v4-re
       with:
         java-version: '17'
         distribution: 'temurin'
@@ -29,7 +29,7 @@ jobs:
       run: ./gradlew assembleDebug
 
     - name: Upload APK artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4 # EZ A LÉNYEG: v4 kell!
       with:
         name: android-apks
         path: app/build/outputs/apk/debug/*.apk
