--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -13,23 +13,21 @@ jobs:
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4  # Frissítve v4-re
+      uses: actions/checkout@v4
 
     - name: Setup JDK 17
-      uses: actions/setup-java@v4 # Frissítve v4-re
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-
+    # Kihagyjuk a chmod +x gradlew részt, mert nincs meg a fájl
+    # Helyette a beépített gradle parancsot használjuk
     - name: Build Debug APK
-      run: ./gradlew assembleDebug
+      run: gradle assembleDebug
 
     - name: Upload APK artifacts
-      uses: actions/upload-artifact@v4 # EZ A LÉNYEG: v4 kell!
+      uses: actions/upload-artifact@v4
       with:
         name: android-apks
         path: app/build/outputs/apk/debug/*.apk
