--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -1,27 +1,22 @@
 cmake_minimum_required(VERSION 3.22.1)
 
-# A projekt neve (ez fog megjelenni a build logokban)
-project("meaning-kernel")
+project("meaning_kernel")
 
-# Itt adjuk hozzá a C++ forrásfájlt
 add_library(
-    meaning-kernel 
+    meaning_kernel 
     SHARED 
-    meaning-kernel.cpp
+    meaning_kernel.cpp
 )
 
-# Megkeressük az Android logoláshoz szükséges könyvtárat
 find_library(log-lib log)
 
-# Összekötjük a kódunkat a szükséges rendszerkönyvtárakkal
 target_link_libraries(
-    meaning-kernel 
+    meaning_kernel 
     ${log-lib} 
     android
 )
 
-# Alapvető beállítások: C++20 szabvány és optimalizálás
-target_compile_options(meaning-kernel PRIVATE
+target_compile_options(meaning_kernel PRIVATE
     -std=c++20
     -O2
 )
