--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,10 @@
         android:allowBackup="true"
         android:label="Narrative Tensor Explorer"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MeaningApp">
-        <activity
+        android:theme="@style/Theme.Material3.Dark"> <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:configChanges="orientation|screenSize|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
