--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
         android:allowBackup="true"
         android:label="Narrative Tensor Explorer"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Material3.Dark"> <activity
+        android:theme="@android:style/Theme.DeviceDefault.NoActionBar"> <activity
             android:name=".MainActivity"
             android:exported="true"
             android:configChanges="orientation|screenSize|keyboardHidden">
