--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,14 @@
-# Modern Android beállítások
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+# AndroidX támogatás bekapcsolása (Kötelező a Compose-hoz)
 android.useAndroidX=true
-android.nonTransitiveRClass=true
 
-# Ez kapcsolja be az új típusú fordítást (KSP támogatáshoz kell)
+# Régi könyvtárak automatikus konvertálása az új szabványra
+android.enableJetifier=true
+
+# Memória optimalizálás a fordító számára (2GB RAM a Gradle-nek)
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+
+# Modern Kotlin kódstílus használata
 kotlin.code.style=official
+
+# Elkerüli a névütközéseket az erőforrásokban
+android.nonTransitiveRClass=true
