--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,34 +1,34 @@
-name: Android Build and Test
+name: Android CI
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
-  workflow_dispatch:
+    branches: [ "main" ]
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
 
-    - name: Setup JDK 17
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
+        cache: gradle
 
-    # Kihagyjuk a chmod +x gradlew részt, mert nincs meg a fájl
-    # Helyette a beépített gradle parancsot használjuk
-    - name: Build Debug APK
-      run: gradle assembleDebug
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
 
-    - name: Upload APK artifacts
+    - name: Build with Gradle
+      run: ./gradlew assembleDebug
+
+    - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: android-apks
-        path: app/build/outputs/apk/debug/*.apk
-        retention-days: 7
+        name: app-debug
+        path: app/build/outputs/apk/debug/app-debug.apk
+
