--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -20,15 +20,12 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-
+    # Itt a trükk: Nem ./gradlew-t írunk, hanem simán gradle-t
     - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      run: gradle assembleDebug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
         name: app-debug
         path: app/build/outputs/apk/debug/app-debug.apk
-
