--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -1,30 +1,25 @@
 cmake_minimum_required(VERSION 3.22.1)
 
-# A projekt neve (meg kell egyeznie a Gradle-ben megadottal)
 project("meaning_kernel")
 
-# A natív könyvtár létrehozása a forrásfájlból
+set(CMAKE_CXX_STANDARD 17)
+
 add_library(
     meaning_kernel
     SHARED
-    meaning_kernel.cpp
+    meaning-kernel.cpp
 )
 
-# Android naplózó könyvtár keresése (hogy tudjunk Log-ot írni)
-find_library(
-    log-lib
-    log
-)
+find_library(log-lib log)
+find_library(android-lib android)
 
-# KRITIKUS: Memória-igazítás beállítása 16KB-ra az Android 16-hoz
-set_target_properties(meaning_kernel PROPERTIES LINK_FLAGS "-Wl,-z,max-page-size=16384")
+if(ANDROID_ABI STREQUAL "arm64-v8a")
+    target_compile_options(meaning_kernel PRIVATE -march=armv8-a -O3)
+    add_definitions(-DHAVE_NEON=1)
+endif()
 
-# Összekapcsolás a szükséges könyvtárakkal
 target_link_libraries(
     meaning_kernel
     ${log-lib}
-    android
+    ${android-lib}
 )
-
-# C++ modern szabvány és optimalizáció
-target_compile_options(meaning_kernel PRIVATE -std=c++20 -O2 -mfpu=neon)
