--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
     <application
         android:allowBackup="true"
         android:label="Narrative Explorer"
         android:icon="@android:drawable/ic_menu_search"
         android:theme="@android:style/Theme.DeviceDefault.NoActionBar">
-
-        <activity
-            android:name="com.meaning.app.MainActivity"
+        <activity 
+            android:name="com.meaning.app.MainActivity" 
             android:exported="true"
-            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden">
+            android:configChanges="orientation|screenSize|screenLayout">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
