--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -1,11 +1,6 @@
 cmake_minimum_required(VERSION 3.22.1)
 project("meaning_kernel")
-
-add_library(
-    meaning_kernel
-    SHARED
-    meaning-kernel.cpp
-)
-
+add_library(meaning_kernel SHARED meaning-kernel.cpp)
 find_library(log-lib log)
 target_link_libraries(meaning_kernel ${log-lib})
+
