--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.22.1)
 project("meaning_kernel")
-add_library(meaning_kernel SHARED meaning-kernel.cpp)
+
+# Itt javítottuk: meaning_kernel.cpp (alulvonással)
+add_library(meaning_kernel SHARED 
+    meaning_kernel.cpp 
+)
+
 find_library(log-lib log)
 target_link_libraries(meaning_kernel ${log-lib})
-
